# Silencer-rs

./: Cargo.toml  README-en.md  README.md  build.rs
release/: RELEASE_NOTES.txt  RELEASE_NOTES_FULL.md
src/: audio.rs  main.rs  utils.rs
