[package]
name = "silencer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
] }